[package]
name = "kek"
description = "get storage value using subxt"
authors.workspace = true
edition.workspace = true
version = "0.0.0"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[[bin]]
path = "main.rs"
name = "npos-snapshot"

[dependencies]
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
futures = { workspace = true }
subxt = { workspace = true }
hex = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true

[features]
default = ["subxt/unstable-light-client", "subxt/jsonrpsee", "subxt/native"]
