[package]
authors = ["btwiuse"]
description = "get storage value using subxt"
edition = "2021"
license = "MIT"
name = "kek"
version = "0.0.2"

[[bin]]
path = "main.rs"
name = "kek"

[dependencies]
clap = { version = "4.5.3", features = ["derive", "cargo"] }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false }
subxt = { version = "0.35.0", default-features = false }
tokio = { version = "1.36", default-features = false, features = ["macros", "time", "rt-multi-thread"] }

[features]
default = ["subxt/unstable-light-client", "subxt/jsonrpsee", "subxt/native"]
